# data-validation-framework

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
cloud_functions/gcs_trigger/: main.py  requirements.txt
config/: data_validation.conf.example
data_validation/: __init__.py  main.py
data_validation/connectors/: __init__.py  source_extract.py
data_validation/notifications/: __init__.py  mailer.py
data_validation/rule_intelligence/: __init__.py  cli.py  config.py  contract.py  db_writer.py  llm.py  profiling.py  review_yaml.py  schema.py
data_validation/validators/: __init__.py  business.py  custodial.py
sql/ddl/: 00_create_database.sql  01_create_tables.sql
sql/dml/: 01_seed_rules.sql  02_seed_objects.sql  03_seed_mappings.sql  04_seed_thresholds.sql  05_seed_notifications.sql
tests/: __init__.py
