[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-validation-framework"
version = "1.0.0"
description = "GCP data validation framework running on Dataproc/PySpark"
requires-python = ">=3.10"
dependencies = [
    "mysql-connector-python>=8.0",
    "pandas>=1.5",
    "tabulate>=0.9",
    "google-cloud-bigquery>=3.0",
    "google-cloud-storage>=2.0",
]

[project.optional-dependencies]
# Local CLI tool only (see data_validation/rule_intelligence/) — never required
# by, or imported from, the Dataproc/PySpark job itself.
rule-intelligence = [
    "langchain>=0.2",
    "langchain-google-genai>=1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
data-validate = "data_validation.main:main"
dv-rules-generate = "data_validation.rule_intelligence.cli:generate_main"
dv-rules-apply = "data_validation.rule_intelligence.cli:apply_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["data_validation*"]
